--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ server.port=8000
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring-api-docs.path=/api-docs
 
 
 ##Spring Boot server configuration
